# cambai-rust-sdk-org

./: Cargo.toml  LICENSE  README.md  reference.md
.fern/: metadata.json
.github/workflows/: ci.yml
docs/: rust_sdk_guide.md  rust_sdk_guide.mdx
examples/: baseten_provider.rs  basic_tts.rs  dubbing.rs  stream_tts.rs  text_to_audio.rs  text_to_voice.rs
src/: client.rs  config.rs  environment.rs  lib.rs  prelude.rs  provider.rs
src/api/: mod.rs
src/api/resources/: mod.rs
src/api/types/: add_dictionary_term_payload.rs  add_target_language_out.rs  audio_output_type.rs  audio_stream.rs  config_stream.rs  config_stream_pipeline.rs  create_audio_separation_request.rs  create_custom_voice_out.rs  create_custom_voice_request.rs  create_dictionary_from_file_request.rs  create_folder_payload.rs  create_project_setup_out.rs  create_project_setup_request_payload.rs  create_project_setup_task_status_query_request.rs  create_story_request.rs  create_stream_out.rs  create_stream_request_payload.rs  create_stream_tts_request_payload.rs  create_text_to_audio_request_payload.rs  create_text_to_voice_request_payload.rs  create_transcription_request.rs  create_translated_tts_out.rs  create_translated_tts_request_payload.rs  create_translation_for_existing_story_request_payload.rs  create_translation_request_payload.rs  create_translation_stream_request_payload.rs  create_tts_out.rs  create_tts_request_payload.rs  data_stream.rs  delete_dictionary_query_request.rs  delete_dictionary_term_query_request.rs  demixing_option.rs  deprecated_streaming_get_stream_result_query_request.rs  (+110 more)
(+34 files in other folders)
