[package]
name = "camb_api"
version = "0.1.1"
edition = "2021"
description = "Rust SDK for camb_api"
license = "MIT"
repository = "https://github.com/cambai/cambai-rust-sdk"
documentation = "https://docs.rs/camb_api"

[lib]
doctest = false

[dependencies]
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
num-bigint = { version = "0.4", features = ["serde"] }
ordered-float = { version = "4.5", features = ["serde"] }
percent-encoding = "2.3"
reqwest = { version = "0.12", features = ["json", "stream"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["multipart"]
multipart = ["reqwest/multipart"]
sse = []
